[tool.poetry]
name = "git-testing"
version = "0.1.0"
description = ""
authors = ["Alex Cheng <alex28.biz@gmail.com>"]
readme = "README.md"
packages = [{include = "git_testing"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
